--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:centerColor="#ff512f"
-        android:endColor="#ff512f"
-        android:startColor="#ff512f"
+        android:centerColor="#f09819"
+        android:endColor="#f09819"
+        android:startColor="#f09819"
         android:type="linear" />
 </shape>
