--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,6 @@
 
     </fragment>
 
-
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.example.internshipdemo4.ui.gallery.GalleryFragment"
@@ -25,4 +24,10 @@
         android:name="com.example.internshipdemo4.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_myjourney"
+        android:name="com.example.internshipdemo4.ui.myjourney.MyjourneyFragment"
+        android:label="My Journey"
+        tools:layout="@layout/fragment_myjourney" />
 </navigation>
