--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,5 +24,9 @@
             android:id="@+id/nav_myvision"
             android:icon="@drawable/ic_menu_camera"
             android:title="My Vision"/>
+        <item
+            android:id="@+id/nav_issues"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Issues"/>
     </group>
 </menu>
