--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -36,4 +36,10 @@
         android:name="com.example.internshipdemo4.ui.myvision.MyvisionFragement"
         android:label="My Journey"
         tools:layout="@layout/fragement_myvision" />
+
+    <fragment
+        android:id="@+id/nav_issues"
+        android:name="com.example.internshipdemo4.ui.issues.IssuesFragment"
+        android:label="My Journey"
+        tools:layout="@layout/fragment_issues" />
 </navigation>
