--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,5 +28,9 @@
             android:id="@+id/nav_issues"
             android:icon="@drawable/ic_menu_camera"
             android:title="Issues"/>
+        <item
+            android:id="@+id/nav_events"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Events"/>
     </group>
 </menu>
