--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -42,4 +42,10 @@
         android:name="com.example.internshipdemo4.ui.issues.IssuesFragment"
         android:label="My Journey"
         tools:layout="@layout/fragment_issues" />
+    <fragment
+        android:id="@+id/nav_events"
+        android:name="com.example.internshipdemo4.ui.events.EventsFragment"
+        android:label="Events"
+        tools:layout="@layout/fragment_events" />
+
 </navigation>
