--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,10 +8,7 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
@@ -23,14 +20,23 @@
         <item
             android:id="@+id/nav_myvision"
             android:icon="@drawable/ic_menu_camera"
-            android:title="My Vision"/>
+            android:title="@string/my_vision"/>
         <item
             android:id="@+id/nav_issues"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Issues"/>
+            android:title="@string/issues"/>
         <item
             android:id="@+id/nav_events"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Events"/>
+            android:title="@string/events"/>
+        <item
+            android:id="@+id/nav_gallery"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/menu_gallery" />
+        <item
+            android:id="@+id/nav_social"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/social" />
+
     </group>
 </menu>
