--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -37,6 +37,10 @@
             android:id="@+id/nav_social"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/social" />
+        <item
+            android:id="@+id/nav_appointments"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/appointments" />
 
     </group>
 </menu>
