--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -41,6 +41,10 @@
             android:id="@+id/nav_appointments"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/appointments" />
+        <item
+            android:id="@+id/nav_becomevolunteer"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/become_volunteer" />
 
     </group>
 </menu>
