--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -45,6 +45,10 @@
             android:id="@+id/nav_becomevolunteer"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/become_volunteer" />
+        <item
+            android:id="@+id/nav_shareyourdetails"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/share_your_details" />
 
     </group>
 </menu>
