--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -49,6 +49,10 @@
             android:id="@+id/nav_shareyourdetails"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/share_your_details" />
+        <item
+            android:id="@+id/nav_myprofile"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/my_proflie" />
 
     </group>
 </menu>
