--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -53,6 +53,10 @@
             android:id="@+id/nav_myprofile"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/my_proflie" />
+        <item
+            android:id="@+id/nav_login"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/login" />
 
     </group>
 </menu>
