--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -72,4 +72,9 @@
         android:name="com.example.internshipdemo4.ui.myprofile.MyprofileFragment"
         android:label="My Profile"
         tools:layout="@layout/fragment_myprofile" />
+    <fragment
+        android:id="@+id/nav_login"
+        android:name="com.example.internshipdemo4.ui.login.LoginFragment"
+        android:label="Login"
+        tools:layout="@layout/fragment_login" />
 </navigation>
