--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,56 +6,53 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_home"
             android:title="@string/menu_home" />
 
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+
         <item
             android:id="@+id/nav_myjourney"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_my_journey"
             android:title="@string/my_journey"/>
         <item
             android:id="@+id/nav_myvision"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_my_vision"
             android:title="@string/my_vision"/>
         <item
             android:id="@+id/nav_issues"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_issues"
             android:title="@string/issues"/>
         <item
             android:id="@+id/nav_events"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_all_events"
             android:title="@string/events"/>
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_gallery"
             android:title="@string/menu_gallery" />
         <item
             android:id="@+id/nav_social"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_social"
             android:title="@string/social" />
         <item
             android:id="@+id/nav_appointments"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_appointment"
             android:title="@string/appointments" />
         <item
             android:id="@+id/nav_becomevolunteer"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_add_volunteer"
             android:title="@string/become_volunteer" />
         <item
             android:id="@+id/nav_shareyourdetails"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_share_details"
             android:title="@string/share_your_details" />
         <item
             android:id="@+id/nav_myprofile"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_my_profile"
             android:title="@string/my_proflie" />
         <item
             android:id="@+id/nav_login"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_logout"
             android:title="@string/login" />
 
     </group>
