--- a/app/src/main/res/layout/fragement_myvision.xml
+++ b/app/src/main/res/layout/fragement_myvision.xml
@@ -7,16 +7,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.myvision.MyvisionFragement">
 
-    <TextView
-        android:id="@+id/text_gallery"
-        android:layout_width="match_parent"
+    <WebView
+        android:id="@+id/webv"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
